--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -5,10 +5,13 @@
       <%= f.label :body, "Comments" %><br>
       <%= f.text_area :body %>
     </p>
+    
+    <div class="rating">
     <p>
       <%= f.label :rating %><br>
       <%= f.text_field :rating, class: "rating" %>
     </p>  
+    </div>
     <p>
       <%= f.submit "Submit" %>
     </p>
