--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -5,8 +5,12 @@
       <%= f.label :body, "Comments" %><br>
       <%= f.text_area :body %>
     </p>
-    
-    <div class="rating">
+
+    <p>
+    <div class="rating"></div>
+    </p>
+
+
     <p>
       <%= f.label :rating %><br>
       <%= f.text_field :rating, class: "rating" %>
