--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
 
         <p class="thumbnail">
       
-        <%= image_tag @product.image_url unless @product.image_url.nil? %>
+        <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
         </p>
     </div><!--end of col-->
     
@@ -22,8 +22,7 @@
           <p><strong>Color:</strong><%= @product.color %></p>
           
           <p><strong>Price:</strong><%= @product.price %></
-        <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
-          
+        
     </div><!--end of col-->    
   </div><!--end of row-->
 
@@ -52,19 +51,19 @@
     <!--end of col-lg-6-->
 </div><!--end of container image-->
 
-<div class="product-reviews">
-    <% @comments.each do |comment| %>
-        <div class="row">
-            <hr>
-            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-            <p><%= "Rating: #{comment.rating}/5" %></p>
-            <p><%= comment.body %></p>
-        </div>
-    <% end %>
-</div>
+
 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+<%= render 'new_comment' %>
+<%= render 'comments' %>
+
+<%= will_paginate @comments %>
+
 <%= @product.comments.rating_desc.first %>
 <%= @product.comments.rating_asc.first %>
+
+<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+          
