--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -2,12 +2,14 @@
 
 <div class="product-reviews">
     <% @comments.each do |comment| %>
-        <div class="row">
+        
             <hr>
-            <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-            <p><%= "Rating: #{comment.rating}/5" %></p>
-            <div class="rated" data-score="<%= comment.rating %>"></div>
-            <p><%= comment.body %></p>
-        </div>
+            <p class="comment"><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+            <%= link_to ('<span class="glyphicon glyphicon-trash"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            
+            <p class="comment"></p>
+            <div class="rated" data-score=" <%= comment.rating %>"></div>
+            <p class="comment"><%= comment.body %></p>
+        
     <% end %>
 </div>
