--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,23 +1,32 @@
-<% if signed_in? %>
-  <h4>Add a review:</h4>
-  <%= form_for([@product, @product.comments.build]) do |f| %>
-    <p>
-      <%= f.label :body, "Comments" %><br>
-      <%= f.text_area :body %>
-    </p>
+  <div class="row">
+    
+      <form class="comment">
+        <% if signed_in? %>
+        <h4>Add a review:</h4>
+        <%= form_for([@product, @product.comments.build]) do |f| %>
+        <p>
+        <%= f.label :body, "Comments" %><br>
+        <%= f.text_area :body, class: "form-control" %>
+        </p>
 
-    <p>
-    <div class="rating"></div>
-    </p>
+        <p>
+        <div class="rating"></div>
+        </p>  
+        
+        <p>
+        <%= submit_tag("Submit", class: "btn btn-default btn-primary btn-sm")  %>
+        </p>
+        </form>
+      <% end %>
+    <% end %>
+  </div><!--endof row group-->
+    <!--end of col-lg-6-->
+</div><!--end of container image-->
 
 
-    <p>
-      <%= f.label :rating %><br>
-      <%= f.text_field :rating, class: "rating" %>
-    </p>  
-    </div>
-    <p>
-      <%= f.submit "Submit" %>
-    </p>
-  <% end %>
-<% end %>
+
+
+
+
+
+
