--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,41 +17,12 @@
       
         <p><strong> Description:</strong><%=@product.description %></p>
         
-        <p><strong>Image_url:</strong></p>
-
           <p><strong>Color:</strong><%= @product.color %></p>
           
-          <p><strong>Price:</strong><%= @product.price %></
-        
+          <p><strong>Price:</strong><%= @product.price %></p>
+        <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
     </div><!--end of col-->    
   </div><!--end of row-->
-
-  <div class="row">
-    
-      <form class="comment">
-        <% if signed_in? %>
-        <h4>Add a review:</h4>
-        <%= form_for([@product, @product.comments.build]) do |f| %>
-        <p>
-        <%= f.label :body, "Comments" %><br>
-        <%= f.text_area :body, class: "form-control" %>
-        </p>
-
-        <p>
-        <div class="rating"></div>
-        </p>  
-        
-        <p>
-        <%= submit_tag("Submit", class: "btn btn-default btn-primary btn-sm")  %>
-        </p>
-        </form>
-      <% end %>
-    <% end %>
-  </div><!--endof row group-->
-    <!--end of col-lg-6-->
-</div><!--end of container image-->
-
-
 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
@@ -60,10 +31,14 @@
 <%= render 'new_comment' %>
 <%= render 'comments' %>
 
-<%= will_paginate @comments %>
+<div class=“pagination”>
+   <%= will_paginate @comments %>
+ </div>
 
-<%= @product.comments.rating_desc.first %>
-<%= @product.comments.rating_asc.first %>
 
-<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+
+<% @product.comments.rating_desc.first %>
+
+
+
           
