--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,28 +2,31 @@
 
 <div class="container image">
   <div class="row">
-    <div class="col-sm-8 col-lg-6">        
+        <div class="col-sm-8 col-lg-6">        
 
-        <p class="thumbnail">
-      
-        <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
-        </p>
-    </div><!--end of col-->
-    
-    <div class=" col-sm-2 col-lg-4">
-        <p>
-        <strong>Name:</strong><%= @product.name %>
-        </p>
-      
-        <p><strong> Description:</strong><%=@product.description %></p>
-        
-          <p><strong>Color:</strong><%= @product.color %></p>
+            <p class="thumbnail">
           
-          <p><strong>Price:</strong><%= @product.price %></p>
-        <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+            <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
+            </p>
+        </div><!--end of col-->
+        
+        <div class=" col-sm-2 col-lg-4">
+            <p>
+                <strong>Name:</strong><%= @product.name %>
+            </p>
+              
+            <p><strong> Description:</strong><%=@product.description %></p>
+                
+            <p><strong>Color:</strong><%= @product.color %></p>
+                  
+            <p><strong>Price:</strong><%= @product.price %></p>
+            <p>Average Rating: 
+                <div class="rated" data-score="<%= @product.average_rating %>"></div> 
+            </p>
+        </div><!--end of col--> 
     </div><!--end of col-->    
   </div><!--end of row-->
-
+ 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
@@ -34,8 +37,6 @@
 <div class=“pagination”>
    <%= will_paginate @comments %>
  </div>
-
-
 
 <% @product.comments.rating_desc.first %>
 
