--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -37,10 +37,14 @@
    font-size: 16px;
    padding-top:5px;
     }
-}
 
-.comment {
+.comment .rated {
   margin-left: 25px;
   text-align: left;
 }
+
+
+}
+
+
 
