fixed comment not saving

--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -3,7 +3,11 @@
 
     <div class="form-group" id="login">
       <p> Don't have an account. Create one now.<a href="">Sign up below</a></p>
-        <label class="col-xs-6" for="name">Email or Username</label>
+
+        <label class="col-xs-6" for="name">Username</label>
+          <input class="form-control" type="alphanumeric" maxlength="35" id="name" placeholder="Username">
+
+        <label class="col-xs-6" for="name">Email</label>
           <input class="form-control" type="alphanumeric" maxlength="35" id="name" placeholder="Username">
 
         <label class="col-xs-6" for="name">Password</label>
