--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -5,7 +5,13 @@
         
             <hr>
             <p class="comment"><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+            <% if signed_in? && current_user.admin? %>
             <%= link_to ('<span class="glyphicon glyphicon-trash"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+            <% else %>
+            <%= link_to ('<span class="glyphicon glyphicon-trash"></span>').html_safe %>
+
+
+            <% end %>
             
             <p class="comment"></p>
             <div class="rated" data-score=" <%= comment.rating %>"></div>
