--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -12,7 +12,7 @@
   <tbody bgcolor ="">
     <tr style="padding-top:10px; padding-right:10px; padding-bottom: 10px; padding-left:5px;">
       <td>
-       <img src="", alt="Great to hear from you" width="100% height="230" style="display: block;" >
+       <img src="", alt="" width="100% height="230" style="display: block;" >
       		<p>You have received a new contact form message. The contents of the message are:</p>
       </td>
     </tr>
