--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,6 +11,18 @@
     </div>
   <% end %>
 
+  <% if comment.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(comment.errors.count, "error") %> prohibited this product from being saved:</h2>
+
+                <ul>
+                  <% comment.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
     <div class="container">
       <div class="row">
         <div class="col-xs-4 ">
