--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,45 +1,64 @@
-
-
-<div class="container image">
-  <div class="row">
-        <div class="col-sm-8 col-lg-6">        
-
-            <p class="thumbnail">
-          
-            <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
+<div class ="container">
+  <div class ="row">
+        <div class ="col-sm-8 col-lg-6">        
+            <p class ="thumbnail">
+              <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
             </p>
         </div><!--end of col-->
         
         <div class=" col-sm-2 col-lg-4">
             <p>
-                <strong>Name:</strong><%= @product.name %>
+              <strong>Name: </strong><%= @product.name %>
             </p>
               
-            <p><strong> Description:</strong><%=@product.description %></p>
-                
-            <p><strong>Color:</strong><%= @product.color %></p>
-                  
-            <p><strong>Price:</strong><%= @product.price %></p>
-            <p>Average Rating: 
-                <div class="rated" data-score="<%= @product.average_rating %>"></div> 
+            <p>
+              <strong> Description: </strong><%=@product.description %>
             </p>
-        </div><!--end of col--> 
-    </div><!--end of col-->    
-  </div><!--end of row-->
- 
+                
+            <p>
+              <strong>Color: </strong><%= @product.color %>
+            </p>
+                  
+            <p>
+              <strong>Price: </strong><%= @product.price %>
+            </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+            <p>Average Rating: 
+              <div class="rated" data-score="<%= @product.average_rating %>"></div>
+            </p>
 
-<%= render 'new_comment' %>
-<%= render 'comments' %>
+              <div>
+              <%= form_tag "/payments/create" do %>
+              <%= render partial: "shared/stripe_checkout_button" %>
+              <% end %>
+            </div>
+            
+        </div> <!--end of col--> 
+        <div>
+              <%= form_tag "/payments/create" do %>
+              <%= render partial: "shared/stripe_checkout_button" %>
+              <% end %>
+            </div>
+        
 
-<div class=“pagination”>
+        <div class="col-sm-2">
+          <div class="link-to-product">
+            <%= link_to 'Back', products_path %>
+            <% if signed_in? && current_user.admin? %>
+            <%= link_to 'Edit', edit_product_path(@product) %> 
+            <% end %>
+            
+          </div>
+        </div> <!--end of col-->  
+       </div> <!--end of row-->      
+  </div> <!--end of container-->
+
+<div>
+    <%= render 'new_comment' %>
+    <%= render 'comments' %>
+
    <%= will_paginate @comments %>
- </div>
-
-<% @product.comments.rating_desc.first %>
-
-
-
-          
+   <% @product.comments.rating_desc.first %>
+</div>
+ 
+      
