--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -7,6 +7,6 @@
     data-description="<%= @product.description %>"
     data-amount="<%= @product.price*100 %>"
     data-locale="auto"
-    data-zip-code="true"
+    data-zip-code="true">
   </script>
  <%= hidden_field_tag(:product_id, @product.id) %>
