--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -2,7 +2,7 @@
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png <% @product.image_url %>"
     data-name="<%= @product.name %>"
     data-description="<%= @product.description %>"
     data-amount="<%= @product.price*100 %>"
