--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
   <div class ="row">
         <div class ="col-sm-8 col-lg-6">        
             <p class ="thumbnail">
-              <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
+              <%= image_tag(@product.image_url, width: "350", class: "img-responsive img-zoom", data_zoom_image: "@product.image_url") unless @product.image_url.nil? %>
             </p>
         </div> <!--end of col-->
         
