--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,5 @@
 $("#new_commment").html("Thank you for your review!");
+$('.product-reviews').prepend("<%= j render @comment %>");
+$("#average-rating").attr('data-score', "<%= @product.average_rating %>");
 
 
