--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
-<% if notice %>
+<!--<% if notice %>
  <p id="notice" class="alert alert-info"><%= notice %></p>
-<% end %>
+<% end %>-->
 
 <div class ="container">
   <div class ="row">
