--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,4 @@
-$("#new_commment").html("Thank you for your review!");
+$("#new_comment").html("Thank you for your review!");
 
 $('.product-reviews').prepend("<%= j render @comment %>");
 
