--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,9 +8,11 @@
 
   <div class="container">
     <div class="row">
-    <% @products.each do |product| %>
-      <%= render partial: "shared/product", locals: {product: product} %>
-      <% end %>
+    <% cache (cache_key_for_products) do %>
+      <% @products.each do |product| %>
+          <%= render partial: "shared/product", locals: {product: product} %>
+        <% end %>
+      <%end %>
     </div><!--end of row-->
     
 
