--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,4 +1,5 @@
-<div class="col-xs-4 col-md-4 ">
+<% cache product do %>
+  <div class="col-xs-4 col-md-4 ">
 	
     <%= image_tag(product.image_url, class:"img-responsive") %>
 
@@ -10,6 +11,8 @@
     
       <%= link_to 'Edit',edit_product_path(product)%>
       <%= link_to 'Destroy', product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></p>
-</div><!--end of col-->
+  </div><!--end of col-->
+
+<% end %>
 
 
