--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -58,6 +58,8 @@
 
        </div> <!--end of row-->      
   </div> <!--end of container-->
+  
+<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 
 <div>
     <%= render 'new_comment' %>
