--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -5,13 +5,14 @@
           <%= f.label :body, "Comments" %><br>
           <%= f.text_area :body, class: "form-control" %>
 
-        <p>
-          <div class="rating"></div>
-        </p>
+          <p>
+            <div class="rating"></div>
+          </p>
         
           <%= f.submit("Submit", class: "btn btn-default btn-primary btn-sm")  %>
           <% end %>
     <% end %>
+  </div>
 
 
 
