--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="container">
     <div class="row">
-      <% cache @products do %>
+      <% cache (cache_key_for_products) do %>
         <% @products.each do |product| %>
           <%= render partial: "shared/product", locals: {product: product} %>
         <% end %>
