--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -66,7 +66,7 @@
       <%= render 'comments' %>
 
      <%= will_paginate @comments %>
-     <% @product.comments.rating_asc.first %>
+     <% @product.comments.rating_desc.first %>
   </div>
  
       
