--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -67,7 +67,7 @@
   }
   h1 {
     font-family: "Ariel", sans-serif;
-    color: #e1dce2 ;
+    color: #777;
     text-align: center;
     margin-top: 50px;
     width: 100%;
@@ -104,11 +104,9 @@
     float:none;
   }
   footer {
-      background-color: purple;
+       
       text-align: center;
       height: 30px;
-      color: #FFF;
-
       position: fixed;
       left: 0;
       right:0;
@@ -153,7 +151,9 @@
     bottom: 150px;
     font-size: 2.5em;
     }
-
+ .intro {
+ text-align: center;
+ }
  
 
 
