--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -16,7 +16,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-xs-4 ">
+        <div class="col-sm-4 ">
           <div class="form-group">
             <%= f.label :name %>
             <%= f.text_field :name, class: "form-control" %>
